// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Options > Render > renders default state 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="border border-default p-4 mt-4 rounded-xl"
    >
      <div
        class="w-full flex flex-col @xl:flex-row items-center gap-4 @xl:gap-8"
      >
        <div
          class="w-full flex items-center gap-2"
        >
          <label
            class="text-base shrink-0"
            for="variant-select"
          >
            Variant
          </label>
          <button
            aria-expanded="false"
            aria-label="Variant options"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
          <div
            class="group flex flex-col w-full transition-background motion-reduce:transition-none !duration-150 group relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)]"
            data-filled="true"
            data-slot="base"
          >
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-testid="hidden-select-container"
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <label>
                <select
                  name="variant"
                  tabindex="-1"
                  title=""
                >
                  <option />
                  <option
                    value=""
                  >
                    None
                  </option>
                  <option
                    value="deep"
                  >
                    Deep
                  </option>
                  <option
                    value="neutral"
                  >
                    Neutral
                  </option>
                  <option
                    value="subtle"
                  >
                    Subtle
                  </option>
                  <option
                    value="vibrant"
                  >
                    Vibrant
                  </option>
                </select>
              </label>
            </div>
            <div
              class="w-full flex flex-col"
              data-slot="mainWrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Variant"
                aria-labelledby="react-aria-_r_9_  variant-select"
                class="relative gap-3 w-full inline-flex flex-row items-center shadow-xs tap-highlight-transparent group-data-[focus=true]:bg-default-200 h-8 min-h-8 px-2 rounded-small bg-default-100 data-[hover=true]:bg-default-200 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
                data-react-aria-pressable="true"
                data-slot="trigger"
                data-testid="VariantOptions"
                id="variant-select"
                tabindex="0"
                type="button"
              >
                <div
                  class="inline-flex h-fit w-[calc(100%_-theme(spacing.6))] min-h-4 items-center gap-1.5 box-border"
                  data-slot="innerWrapper"
                >
                  <span
                    class="text-foreground-500 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground"
                    data-slot="value"
                    id="react-aria-_r_9_"
                  >
                    Select variant
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="absolute end-3 w-4 h-4 transition-transform duration-150 ease motion-reduce:transition-none data-[open=true]:rotate-180"
                  data-slot="selectorIcon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="w-full flex items-center gap-2"
        >
          <label
            class="text-base shrink-0"
            for="lock-select"
          >
            Lock
          </label>
          <button
            aria-expanded="false"
            aria-label="Lock options"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
          <div
            class="group flex flex-col w-full transition-background motion-reduce:transition-none !duration-150 group relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)]"
            data-filled="true"
            data-slot="base"
          >
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-testid="hidden-select-container"
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <label>
                <select
                  name="lock"
                  tabindex="-1"
                  title=""
                >
                  <option />
                  <option
                    value="None"
                  >
                    None
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="200"
                  >
                    200
                  </option>
                  <option
                    value="300"
                  >
                    300
                  </option>
                  <option
                    value="400"
                  >
                    400
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                  <option
                    value="600"
                  >
                    600
                  </option>
                  <option
                    value="700"
                  >
                    700
                  </option>
                  <option
                    value="800"
                  >
                    800
                  </option>
                  <option
                    value="900"
                  >
                    900
                  </option>
                  <option
                    value="950"
                  >
                    950
                  </option>
                </select>
              </label>
            </div>
            <div
              class="w-full flex flex-col"
              data-slot="mainWrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Lock"
                aria-labelledby="react-aria-_r_j_  lock-select"
                class="relative gap-3 w-full inline-flex flex-row items-center shadow-xs tap-highlight-transparent group-data-[focus=true]:bg-default-200 h-8 min-h-8 px-2 rounded-small bg-default-100 data-[hover=true]:bg-default-200 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
                data-react-aria-pressable="true"
                data-slot="trigger"
                data-testid="LockOptions"
                id="lock-select"
                tabindex="0"
                type="button"
              >
                <div
                  class="inline-flex h-fit w-[calc(100%_-theme(spacing.6))] min-h-4 items-center gap-1.5 box-border"
                  data-slot="innerWrapper"
                >
                  <span
                    class="text-foreground-500 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground"
                    data-slot="value"
                    id="react-aria-_r_j_"
                  >
                    Select lock
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="absolute end-3 w-4 h-4 transition-transform duration-150 ease motion-reduce:transition-none data-[open=true]:rotate-180"
                  data-slot="selectorIcon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full flex flex-col @xl:flex-row items-start gap-4 @xl:gap-8 mt-4"
      >
        <div
          class="w-full"
        >
          <div
            aria-labelledby="react-aria-_r_l_"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_k_"
            role="group"
          >
            <div
              class="w-full flex justify-between items-center"
              data-slot="labelWrapper"
            >
              <label
                class="flex gap-2 items-center"
                data-slot="label"
                id="react-aria-_r_l_"
              >
                Steps
                <button
                  aria-expanded="false"
                  aria-label="Description for Steps"
                  class="inline-flex shrink-0 text-base"
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Reset Steps to default"
                  class="text-lg transition-opacity opacity-80 hover:opacity-100 disabled:opacity-60"
                  disabled=""
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
                    />
                  </svg>
                </button>
              </label>
              <output
                aria-live="off"
                class="text-small"
                data-slot="value"
                for="react-aria-_r_l_-0"
              >
                <span
                  class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-default text-default-foreground w-12 max-w-none text-center"
                >
                  <span
                    class="flex-1 text-inherit font-normal px-1"
                  >
                    11
                  </span>
                </span>
              </output>
            </div>
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-foreground"
                  data-slot="filler"
                  style="left: 0%; width: 47.05882352941176%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 47.05882352941176%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_l_"
                      aria-orientation="horizontal"
                      aria-valuetext="11"
                      id="react-aria-_r_l_-0"
                      max="20"
                      min="3"
                      name="steps"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="11"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-labelledby="react-aria-_r_v_"
            class="flex flex-col w-full gap-1 opacity-disabled"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_u_"
            role="group"
          >
            <div
              class="w-full flex justify-between items-center"
              data-slot="labelWrapper"
            >
              <label
                class="flex gap-2 items-center"
                data-slot="label"
                id="react-aria-_r_v_"
              >
                Saturation
                <button
                  aria-label="Reset Saturation to default"
                  class="text-lg transition-opacity opacity-80 hover:opacity-100 disabled:opacity-60"
                  disabled=""
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
                    />
                  </svg>
                </button>
              </label>
              <output
                aria-live="off"
                class="text-small"
                data-slot="value"
                for="react-aria-_r_v_-0"
              >
                <span
                  class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-default text-default-foreground w-12 max-w-none text-center"
                >
                  <span
                    class="flex-1 text-inherit font-normal px-1"
                  >
                    97.9
                  </span>
                </span>
              </output>
            </div>
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-foreground"
                  data-slot="filler"
                  style="left: 0%; width: 97.9%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-default ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 97.9%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_v_"
                      aria-orientation="horizontal"
                      aria-valuetext="97.9"
                      disabled=""
                      id="react-aria-_r_v_-0"
                      max="100"
                      min="0"
                      name="saturation"
                      step="0.1"
                      tabindex="0"
                      type="range"
                      value="97.9"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-2 mt-1"
          >
            <label
              class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
            >
              <input
                aria-labelledby="_r_16_"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="saturationOverride"
                role="switch"
                tabindex="0"
                type="checkbox"
                value=""
              />
              <span
                aria-hidden="true"
                class="relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground transition-background h-4 w-8 px-0.5"
              >
                <span
                  class="z-10 flex items-center justify-center shadow-small rounded-full origin-right pointer-events-none transition-all bg-background size-3 group-data-[selected=true]:ms-4"
                />
              </span>
              <span
                class="relative text-foreground select-none ms-2 inline-flex gap-1 text-sm/4"
                id="_r_16_"
              >
                <span>
                  Apply saturation to all colors
                </span>
              </span>
            </label>
            <button
              aria-expanded="false"
              aria-label="Saturation override options"
              class="inline-flex shrink-0 text-base"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col @xl:flex-row items-start @xl:items-center justify-start @xl:justify-between gap-4 mt-4 @xl:mt-2"
      >
        <div
          class="flex items-center gap-2 shrink-0"
        >
          <label
            class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          >
            <input
              aria-label="Light scale"
              aria-labelledby="_r_19_"
              class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
              data-react-aria-pressable="true"
              name="mode"
              role="switch"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <span
              aria-hidden="true"
              class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-10 h-6 transition-background"
            >
              <span
                class="z-10 flex items-center justify-center shadow-small rounded-full origin-right pointer-events-none w-4 h-4 text-tiny group-data-[selected=true]:ms-4 transition-all group-data-[pressed=true]:w-5 group-data-[selected]:group-data-[pressed]:ml-3 bg-background"
              />
            </span>
            <span
              class="relative text-foreground select-none ms-2 text-small"
              id="_r_19_"
            >
              Light scale
            </span>
          </label>
          <button
            aria-expanded="false"
            aria-label="Dark scale"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-3 min-w-16 h-8 text-tiny gap-2 rounded-small [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default text-default-foreground data-[hover=true]:opacity-hover"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-base"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM108.68,208H70.05L42.33,180.28a8,8,0,0,1,0-11.31L96,115.31,148.69,168Zm105-105L160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
              />
            </svg>
            Reset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Options > Render > renders with saturationOverride enabled 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="border border-default p-4 mt-4 rounded-xl"
    >
      <div
        class="w-full flex flex-col @xl:flex-row items-center gap-4 @xl:gap-8"
      >
        <div
          class="w-full flex items-center gap-2"
        >
          <label
            class="text-base shrink-0"
            for="variant-select"
          >
            Variant
          </label>
          <button
            aria-expanded="false"
            aria-label="Variant options"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
          <div
            class="group flex flex-col w-full opacity-disabled pointer-events-none transition-background motion-reduce:transition-none !duration-150 group relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)]"
            data-filled="true"
            data-slot="base"
          >
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-testid="hidden-select-container"
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <label>
                <select
                  disabled=""
                  name="variant"
                  tabindex="-1"
                >
                  <option />
                  <option
                    value=""
                  >
                    None
                  </option>
                  <option
                    value="deep"
                  >
                    Deep
                  </option>
                  <option
                    value="neutral"
                  >
                    Neutral
                  </option>
                  <option
                    value="subtle"
                  >
                    Subtle
                  </option>
                  <option
                    value="vibrant"
                  >
                    Vibrant
                  </option>
                </select>
              </label>
            </div>
            <div
              class="w-full flex flex-col"
              data-slot="mainWrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Variant"
                aria-labelledby="react-aria-_r_1l_  variant-select"
                class="relative gap-3 w-full inline-flex flex-row items-center shadow-xs tap-highlight-transparent group-data-[focus=true]:bg-default-200 h-8 min-h-8 px-2 rounded-small pointer-events-none bg-default-100 data-[hover=true]:bg-default-200 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
                data-disabled="true"
                data-react-aria-pressable="true"
                data-slot="trigger"
                data-testid="VariantOptions"
                id="variant-select"
                tabindex="0"
                type="button"
              >
                <div
                  class="inline-flex h-fit w-[calc(100%_-theme(spacing.6))] min-h-4 items-center gap-1.5 box-border"
                  data-slot="innerWrapper"
                >
                  <span
                    class="text-foreground-500 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground"
                    data-slot="value"
                    id="react-aria-_r_1l_"
                  >
                    Select variant
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="absolute end-3 w-4 h-4 transition-transform duration-150 ease motion-reduce:transition-none data-[open=true]:rotate-180"
                  data-slot="selectorIcon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="w-full flex items-center gap-2"
        >
          <label
            class="text-base shrink-0"
            for="lock-select"
          >
            Lock
          </label>
          <button
            aria-expanded="false"
            aria-label="Lock options"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
          <div
            class="group flex flex-col w-full transition-background motion-reduce:transition-none !duration-150 group relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)]"
            data-filled="true"
            data-slot="base"
          >
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-testid="hidden-select-container"
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <label>
                <select
                  name="lock"
                  tabindex="-1"
                  title=""
                >
                  <option />
                  <option
                    value="None"
                  >
                    None
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="200"
                  >
                    200
                  </option>
                  <option
                    value="300"
                  >
                    300
                  </option>
                  <option
                    value="400"
                  >
                    400
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                  <option
                    value="600"
                  >
                    600
                  </option>
                  <option
                    value="700"
                  >
                    700
                  </option>
                  <option
                    value="800"
                  >
                    800
                  </option>
                  <option
                    value="900"
                  >
                    900
                  </option>
                  <option
                    value="950"
                  >
                    950
                  </option>
                </select>
              </label>
            </div>
            <div
              class="w-full flex flex-col"
              data-slot="mainWrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Lock"
                aria-labelledby="react-aria-_r_1v_  lock-select"
                class="relative gap-3 w-full inline-flex flex-row items-center shadow-xs tap-highlight-transparent group-data-[focus=true]:bg-default-200 h-8 min-h-8 px-2 rounded-small bg-default-100 data-[hover=true]:bg-default-200 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
                data-react-aria-pressable="true"
                data-slot="trigger"
                data-testid="LockOptions"
                id="lock-select"
                tabindex="0"
                type="button"
              >
                <div
                  class="inline-flex h-fit w-[calc(100%_-theme(spacing.6))] min-h-4 items-center gap-1.5 box-border"
                  data-slot="innerWrapper"
                >
                  <span
                    class="text-foreground-500 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground"
                    data-slot="value"
                    id="react-aria-_r_1v_"
                  >
                    Select lock
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="absolute end-3 w-4 h-4 transition-transform duration-150 ease motion-reduce:transition-none data-[open=true]:rotate-180"
                  data-slot="selectorIcon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full flex flex-col @xl:flex-row items-start gap-4 @xl:gap-8 mt-4"
      >
        <div
          class="w-full"
        >
          <div
            aria-labelledby="react-aria-_r_21_"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_20_"
            role="group"
          >
            <div
              class="w-full flex justify-between items-center"
              data-slot="labelWrapper"
            >
              <label
                class="flex gap-2 items-center"
                data-slot="label"
                id="react-aria-_r_21_"
              >
                Steps
                <button
                  aria-expanded="false"
                  aria-label="Description for Steps"
                  class="inline-flex shrink-0 text-base"
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Reset Steps to default"
                  class="text-lg transition-opacity opacity-80 hover:opacity-100 disabled:opacity-60"
                  disabled=""
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
                    />
                  </svg>
                </button>
              </label>
              <output
                aria-live="off"
                class="text-small"
                data-slot="value"
                for="react-aria-_r_21_-0"
              >
                <span
                  class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-default text-default-foreground w-12 max-w-none text-center"
                >
                  <span
                    class="flex-1 text-inherit font-normal px-1"
                  >
                    11
                  </span>
                </span>
              </output>
            </div>
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-foreground"
                  data-slot="filler"
                  style="left: 0%; width: 47.05882352941176%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 47.05882352941176%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_21_"
                      aria-orientation="horizontal"
                      aria-valuetext="11"
                      id="react-aria-_r_21_-0"
                      max="20"
                      min="3"
                      name="steps"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="11"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-labelledby="react-aria-_r_2b_"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_2a_"
            role="group"
          >
            <div
              class="w-full flex justify-between items-center"
              data-slot="labelWrapper"
            >
              <label
                class="flex gap-2 items-center"
                data-slot="label"
                id="react-aria-_r_2b_"
              >
                Saturation
                <button
                  aria-label="Reset Saturation to default"
                  class="text-lg transition-opacity opacity-80 hover:opacity-100 disabled:opacity-60"
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
                    />
                  </svg>
                </button>
              </label>
              <output
                aria-live="off"
                class="text-small"
                data-slot="value"
                for="react-aria-_r_2b_-0"
              >
                <span
                  class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-primary text-primary-foreground w-12 max-w-none text-center"
                >
                  <span
                    class="flex-1 text-inherit font-normal px-1"
                  >
                    50
                  </span>
                </span>
              </output>
            </div>
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-foreground"
                  data-slot="filler"
                  style="left: 0%; width: 50%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 50%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_2b_"
                      aria-orientation="horizontal"
                      aria-valuetext="50"
                      id="react-aria-_r_2b_-0"
                      max="100"
                      min="0"
                      name="saturation"
                      step="0.1"
                      tabindex="0"
                      type="range"
                      value="50"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-2 mt-1"
          >
            <label
              class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
              data-selected="true"
            >
              <input
                aria-labelledby="_r_2i_"
                checked=""
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="saturationOverride"
                role="switch"
                tabindex="0"
                type="checkbox"
                value=""
              />
              <span
                aria-hidden="true"
                class="relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground transition-background h-4 w-8 px-0.5"
              >
                <span
                  class="z-10 flex items-center justify-center shadow-small rounded-full origin-right pointer-events-none transition-all bg-background size-3 group-data-[selected=true]:ms-4"
                />
              </span>
              <span
                class="relative text-foreground select-none ms-2 inline-flex gap-1 text-sm/4"
                id="_r_2i_"
              >
                <span>
                  Apply saturation to all colors
                </span>
              </span>
            </label>
            <button
              aria-expanded="false"
              aria-label="Saturation override options"
              class="inline-flex shrink-0 text-base"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col @xl:flex-row items-start @xl:items-center justify-start @xl:justify-between gap-4 mt-4 @xl:mt-2"
      >
        <div
          class="flex items-center gap-2 shrink-0"
        >
          <label
            class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          >
            <input
              aria-label="Light scale"
              aria-labelledby="_r_2l_"
              class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
              data-react-aria-pressable="true"
              name="mode"
              role="switch"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <span
              aria-hidden="true"
              class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-10 h-6 transition-background"
            >
              <span
                class="z-10 flex items-center justify-center shadow-small rounded-full origin-right pointer-events-none w-4 h-4 text-tiny group-data-[selected=true]:ms-4 transition-all group-data-[pressed=true]:w-5 group-data-[selected]:group-data-[pressed]:ml-3 bg-background"
              />
            </span>
            <span
              class="relative text-foreground select-none ms-2 text-small"
              id="_r_2l_"
            >
              Light scale
            </span>
          </label>
          <button
            aria-expanded="false"
            aria-label="Dark scale"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-3 min-w-16 h-8 text-tiny gap-2 rounded-small [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default text-default-foreground data-[hover=true]:opacity-hover"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-base"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM108.68,208H70.05L42.33,180.28a8,8,0,0,1,0-11.31L96,115.31,148.69,168Zm105-105L160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
              />
            </svg>
            Reset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Options > Render > renders with variant and lock selected 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="border border-default p-4 mt-4 rounded-xl"
    >
      <div
        class="w-full flex flex-col @xl:flex-row items-center gap-4 @xl:gap-8"
      >
        <div
          class="w-full flex items-center gap-2"
        >
          <label
            class="text-base shrink-0"
            for="variant-select"
          >
            Variant
          </label>
          <button
            aria-expanded="false"
            aria-label="Variant options"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
          <div
            class="group flex flex-col w-full transition-background motion-reduce:transition-none !duration-150 group relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)]"
            data-filled="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-testid="hidden-select-container"
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <label>
                <select
                  name="variant"
                  tabindex="-1"
                  title=""
                >
                  <option />
                  <option
                    value=""
                  >
                    None
                  </option>
                  <option
                    value="deep"
                  >
                    Deep
                  </option>
                  <option
                    value="neutral"
                  >
                    Neutral
                  </option>
                  <option
                    value="subtle"
                  >
                    Subtle
                  </option>
                  <option
                    value="vibrant"
                  >
                    Vibrant
                  </option>
                </select>
              </label>
            </div>
            <div
              class="w-full flex flex-col"
              data-slot="mainWrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Variant"
                aria-labelledby="react-aria-_r_31_  variant-select"
                class="relative gap-3 w-full inline-flex flex-row items-center shadow-xs tap-highlight-transparent group-data-[focus=true]:bg-default-200 h-8 min-h-8 px-2 rounded-small outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 bg-default-200 data-[hover=true]:bg-default-400"
                data-react-aria-pressable="true"
                data-slot="trigger"
                data-testid="VariantOptions"
                id="variant-select"
                tabindex="0"
                type="button"
              >
                <div
                  class="inline-flex h-fit w-[calc(100%_-theme(spacing.6))] min-h-4 items-center gap-1.5 box-border"
                  data-slot="innerWrapper"
                >
                  <span
                    class="text-foreground-500 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground"
                    data-slot="value"
                    id="react-aria-_r_31_"
                  >
                    Vibrant
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="absolute end-3 w-4 h-4 transition-transform duration-150 ease motion-reduce:transition-none data-[open=true]:rotate-180"
                  data-slot="selectorIcon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="w-full flex items-center gap-2"
        >
          <label
            class="text-base shrink-0"
            for="lock-select"
          >
            Lock
          </label>
          <button
            aria-expanded="false"
            aria-label="Lock options"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
          <div
            class="group flex flex-col w-full transition-background motion-reduce:transition-none !duration-150 group relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)]"
            data-filled="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              aria-hidden="true"
              data-a11y-ignore="aria-hidden-focus"
              data-testid="hidden-select-container"
              style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            >
              <label>
                <select
                  name="lock"
                  tabindex="-1"
                  title=""
                >
                  <option />
                  <option
                    value="None"
                  >
                    None
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="200"
                  >
                    200
                  </option>
                  <option
                    value="300"
                  >
                    300
                  </option>
                  <option
                    value="400"
                  >
                    400
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                  <option
                    value="600"
                  >
                    600
                  </option>
                  <option
                    value="700"
                  >
                    700
                  </option>
                  <option
                    value="800"
                  >
                    800
                  </option>
                  <option
                    value="900"
                  >
                    900
                  </option>
                  <option
                    value="950"
                  >
                    950
                  </option>
                </select>
              </label>
            </div>
            <div
              class="w-full flex flex-col"
              data-slot="mainWrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Lock"
                aria-labelledby="react-aria-_r_3b_  lock-select"
                class="relative gap-3 w-full inline-flex flex-row items-center shadow-xs tap-highlight-transparent group-data-[focus=true]:bg-default-200 h-8 min-h-8 px-2 rounded-small outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 bg-default-200 data-[hover=true]:bg-default-400"
                data-react-aria-pressable="true"
                data-slot="trigger"
                data-testid="LockOptions"
                id="lock-select"
                tabindex="0"
                type="button"
              >
                <div
                  class="inline-flex h-fit w-[calc(100%_-theme(spacing.6))] min-h-4 items-center gap-1.5 box-border"
                  data-slot="innerWrapper"
                >
                  <span
                    class="text-foreground-500 font-normal w-full text-start text-small truncate group-data-[has-value=true]:text-default-foreground"
                    data-slot="value"
                    id="react-aria-_r_3b_"
                  >
                    500
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="absolute end-3 w-4 h-4 transition-transform duration-150 ease motion-reduce:transition-none data-[open=true]:rotate-180"
                  data-slot="selectorIcon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="presentation"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full flex flex-col @xl:flex-row items-start gap-4 @xl:gap-8 mt-4"
      >
        <div
          class="w-full"
        >
          <div
            aria-labelledby="react-aria-_r_3d_"
            class="flex flex-col w-full gap-1"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_3c_"
            role="group"
          >
            <div
              class="w-full flex justify-between items-center"
              data-slot="labelWrapper"
            >
              <label
                class="flex gap-2 items-center"
                data-slot="label"
                id="react-aria-_r_3d_"
              >
                Steps
                <button
                  aria-expanded="false"
                  aria-label="Description for Steps"
                  class="inline-flex shrink-0 text-base"
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Reset Steps to default"
                  class="text-lg transition-opacity opacity-80 hover:opacity-100 disabled:opacity-60"
                  disabled=""
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
                    />
                  </svg>
                </button>
              </label>
              <output
                aria-live="off"
                class="text-small"
                data-slot="value"
                for="react-aria-_r_3d_-0"
              >
                <span
                  class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-default text-default-foreground w-12 max-w-none text-center"
                >
                  <span
                    class="flex-1 text-inherit font-normal px-1"
                  >
                    11
                  </span>
                </span>
              </output>
            </div>
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-foreground"
                  data-slot="filler"
                  style="left: 0%; width: 47.05882352941176%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 47.05882352941176%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_3d_"
                      aria-orientation="horizontal"
                      aria-valuetext="11"
                      id="react-aria-_r_3d_-0"
                      max="20"
                      min="3"
                      name="steps"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="11"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-labelledby="react-aria-_r_3n_"
            class="flex flex-col w-full gap-1 opacity-disabled"
            data-hover="false"
            data-orientation="horizontal"
            data-slot="base"
            id="react-aria-_r_3m_"
            role="group"
          >
            <div
              class="w-full flex justify-between items-center"
              data-slot="labelWrapper"
            >
              <label
                class="flex gap-2 items-center"
                data-slot="label"
                id="react-aria-_r_3n_"
              >
                Saturation
                <button
                  aria-label="Reset Saturation to default"
                  class="text-lg transition-opacity opacity-80 hover:opacity-100 disabled:opacity-60"
                  disabled=""
                  type="button"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM213.67,103,160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
                    />
                  </svg>
                </button>
              </label>
              <output
                aria-live="off"
                class="text-small"
                data-slot="value"
                for="react-aria-_r_3n_-0"
              >
                <span
                  class="relative min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-default text-default-foreground w-12 max-w-none text-center"
                >
                  <span
                    class="flex-1 text-inherit font-normal px-1"
                  >
                    97.9
                  </span>
                </span>
              </output>
            </div>
            <div
              class="relative flex gap-2 items-center"
              data-slot="track-wrapper"
            >
              <div
                class="flex w-full relative rounded-full bg-default-300/50 border-x-transparent h-1 my-[calc((theme(spacing.5)-theme(spacing.1))/2)] border-x-[calc(theme(spacing.5)/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground"
                data-fill-end="false"
                data-fill-start="true"
                data-slot="track"
                data-thumb-hidden="false"
                data-vertical="false"
                style="position: relative; touch-action: none;"
              >
                <div
                  class="h-full absolute bg-foreground"
                  data-slot="filler"
                  style="left: 0%; width: 97.9%;"
                />
                <div
                  aria-label="Slider thumb 1"
                  class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 w-5 h-5 after:w-4 after:h-4 rounded-full after:rounded-full bg-foreground top-1/2 cursor-default ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small"
                  data-react-aria-pressable="true"
                  data-slot="thumb"
                  index="0"
                  orientation="horizontal"
                  style="position: absolute; left: 97.9%; transform: translate(-50%, -50%); touch-action: none;"
                >
                  <div
                    style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                  >
                    <input
                      aria-describedby=""
                      aria-details=""
                      aria-labelledby="react-aria-_r_3n_"
                      aria-orientation="horizontal"
                      aria-valuetext="97.9"
                      disabled=""
                      id="react-aria-_r_3n_-0"
                      max="100"
                      min="0"
                      name="saturation"
                      step="0.1"
                      tabindex="0"
                      type="range"
                      value="97.9"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center gap-2 mt-1"
          >
            <label
              class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
            >
              <input
                aria-labelledby="_r_3u_"
                class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
                data-react-aria-pressable="true"
                name="saturationOverride"
                role="switch"
                tabindex="0"
                type="checkbox"
                value=""
              />
              <span
                aria-hidden="true"
                class="relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground transition-background h-4 w-8 px-0.5"
              >
                <span
                  class="z-10 flex items-center justify-center shadow-small rounded-full origin-right pointer-events-none transition-all bg-background size-3 group-data-[selected=true]:ms-4"
                />
              </span>
              <span
                class="relative text-foreground select-none ms-2 inline-flex gap-1 text-sm/4"
                id="_r_3u_"
              >
                <span>
                  Apply saturation to all colors
                </span>
              </span>
            </label>
            <button
              aria-expanded="false"
              aria-label="Saturation override options"
              class="inline-flex shrink-0 text-base"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col @xl:flex-row items-start @xl:items-center justify-start @xl:justify-between gap-4 mt-4 @xl:mt-2"
      >
        <div
          class="flex items-center gap-2 shrink-0"
        >
          <label
            class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          >
            <input
              aria-label="Light scale"
              aria-labelledby="_r_41_"
              class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
              data-react-aria-pressable="true"
              name="mode"
              role="switch"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <span
              aria-hidden="true"
              class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-10 h-6 transition-background"
            >
              <span
                class="z-10 flex items-center justify-center shadow-small rounded-full origin-right pointer-events-none w-4 h-4 text-tiny group-data-[selected=true]:ms-4 transition-all group-data-[pressed=true]:w-5 group-data-[selected]:group-data-[pressed]:ml-3 bg-background"
              />
            </span>
            <span
              class="relative text-foreground select-none ms-2 text-small"
              id="_r_41_"
            >
              Light scale
            </span>
          </label>
          <button
            aria-expanded="false"
            aria-label="Dark scale"
            class="inline-flex shrink-0 text-base"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.1,88.1,0,0,1,128,216Zm16-40a8,8,0,0,1-8,8,16,16,0,0,1-16-16V128a8,8,0,0,1,0-16,16,16,0,0,1,16,16v40A8,8,0,0,1,144,176ZM112,84a12,12,0,1,1,12,12A12,12,0,0,1,112,84Z"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-3 min-w-16 h-8 text-tiny gap-2 rounded-small [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default text-default-foreground data-[hover=true]:opacity-hover"
            data-react-aria-pressable="true"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="text-base"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M225,80.4,183.6,39a24,24,0,0,0-33.94,0L31,157.66a24,24,0,0,0,0,33.94l30.06,30.06A8,8,0,0,0,66.74,224H216a8,8,0,0,0,0-16h-84.7L225,114.34A24,24,0,0,0,225,80.4ZM108.68,208H70.05L42.33,180.28a8,8,0,0,1,0-11.31L96,115.31,148.69,168Zm105-105L160,156.69,107.31,104,161,50.34a8,8,0,0,1,11.32,0l41.38,41.38a8,8,0,0,1,0,11.31Z"
              />
            </svg>
            Reset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
